--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,1 +1,9 @@
 {% extends "base.html" %}
+
+{% block content %}
+<form method="POST">
+{{form.as_p}}
+<button type="submit">Submit</button>
+</form>
+
+{% endblock %}
